--- a/Develop/package.json
+++ b/Develop/package.json
@@ -5,8 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start": "npm run build && cd server && node server.js",
+    "start": "node server/server.js",
     "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
     "install": "cd client && npm install",
