--- a/Develop/package.json
+++ b/Develop/package.json
@@ -2,13 +2,14 @@
   "name": "JATE",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server.js",
   "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "dev": "webpack-dev-server",
-    "start": "node server/server.js",
-    "server": "cd server nodemon server.js --ignore client",
-    "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "server": "node server/server.js",
+    "build:client": "cd client && npm run build",
+    "install:client": "cd client && npm install",
+    "install:server": "cd server && npm install",
     "client": "cd client && npm start"
     
   },
