--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "JATE",
+  "name": "LONZEE",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm run server",
     "dev": "webpack-dev-server",
-    "server": "node server/server.js",
-    "client": "webpack --config client/webpack.config.js --watch",
-    "build:client": "cd client && npm run build",
-    "install:client": "cd client && npm install",
-    "install:server": "cd server && npm install"
-    
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
